# simple-s3-files-storage

./: .editorconfig  .envexample  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
deploy/: .envexample  alembic.ini  docker-compose.yaml
deploy/nginx/conf.d/: app.conf
src/: main.py
src/api/: __init__.py  file.py  main.py  url.py  user.py
src/api/di/: __init__.py  db.py  user.py
src/api/handlers/: file.py  user.py
src/api/handlers/requests/: user.py
src/api/handlers/responses/: user.py
src/core/: config.py
src/db/migrations/: env.py
src/db/migrations/versions/: 3091be21efb7_initial.py  a05bb06088d5_initial_db_01.py  a48c14feb66f_01_initial_db.py
src/db/models/: base.py  file.py  url.py  user.py
src/db/repositories/: base.py  file.py  holder.py  url.py  user.py
src/db/repositories/redis/: base.py
src/db/repositories/s3/: __init__.py  s3.py
src/di/: __init__.py  db.py  file.py  url.py
src/dto/: url.py  user.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: a48c14feb66f_01_initial_db.py
src/infrastructure/db/models/: file.py  user.py
src/infrastructure/db/repositories/: base.py  file.py  holder.py  user.py
src/infrastructure/db/repositories/redis/: __init__.py
src/infrastructure/db/repositories/s3/: __init__.py  s3.py
src/middlewares/: __init__.py  blacklist.py
src/schemas/: file.py  url.py  user.py
src/services/: file.py  url.py  user.py
src/usecases/: file.py  user.py
tests/: test_main.py
tests/test_usecases/user/: test_user.py
